Cambios en las clases que atañen al disco (y añadida una clase de prueba)